# Languava

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  ci.yml  docker-smoke.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_18_1629-init_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  security.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: user.py
backend/app/tasks/: worker.py
backend/tests/unit/: test_apihealth.py
docs/: backend.md
scripts/: setup-dev.sh
